--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -10,6 +10,7 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  margin: 0 0 32px 0;
 }
 
 /* do not edit this footer */
@@ -23,4 +24,18 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  gap: 52px;
+}
+
+.card {
+  flex: 0 1 200px;
+}
+
+body {
+  text-align: center;
 }
